<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity Names -->
    <string name="app_name">Android-Input</string>
    <string name="title_activity_media">MediaActivity</string>
    <string name="title_activity_post_media">PostMediaActivity</string>
    <string name="title_activity_remote">RemoteActivity</string>

    <!-- Multi-Activity Strings -->
    <string name="action_settings">Settings</string>
    <string name="back">Back</string>

    <!-- Main Activity -->
    <string name="communication">Send Messages</string>
    <string name="media">Take Picture or Record Video</string>
    <string name="remote">Remote</string>
    <string name="controlGlass">Tap to Control Glass</string>

    <!-- Media Activity -->
    <string name="take_picture">Take a Picture</string>
    <string name="record_video">Record a Video</string>

    <!-- Picture/Video Activity -->
    <string name="redo">Redo</string>
    <string name="save">Save</string>
    <string name="send">Send</string>

    <!-- Remote Activity -->
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="select">Select</string>
    <string name="returnMain">Return to Main Screen</string>



</resources>
