<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mglass.android.RemoteActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:id="@+id/llTop"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/purple_button"
                style="@style/ButtonText"
                android:id="@+id/btnLeft"
                android:text="@string/left"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/purple_button"
                style="@style/ButtonText"
                android:id="@+id/btnRight"
                android:text="@string/right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:id="@+id/llBottom"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/purple_button"
                style="@style/ButtonText"
                android:id="@+id/btnSelect"
                android:text="@string/select"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnBack"
                android:text="@string/back"
                android:background="@drawable/purple_button"
                style="@style/ButtonText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/llBasement"
            android:weightSum="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnReturn"
                android:text="@string/returnMain"
                android:textSize="22sp"
                android:background="@drawable/purple_button"
                style="@style/ButtonText"
                android:enabled="true"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
