<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mglass.android.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:orientation="vertical">


            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/btnCommunication"
                android:background="@drawable/green_button"
                style="@style/ButtonText"
                android:text="@string/communication"
                android:enabled="true"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/blue_button"
                style="@style/ButtonText"
                android:id="@+id/btnMedia"
                android:text="@string/media"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/purple_button"
                style="@style/ButtonText"
                android:id="@+id/btnRemote"
                android:text="@string/controlGlass"
                android:textAllCaps="false"
                android:textSize="26sp"
                android:enabled="true"/>

    </LinearLayout>

</RelativeLayout>
